WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287093
FileSystemWritableStream should expose the exception thrown when retrieving a blob
https://bugs.webkit.org/show_bug.cgi?id=287093
Summary
FileSystemWritableStream should expose the exception thrown when retrieving a...
youenn fablet
Reported
2025-02-05 10:21:11 PST
FileSystemWritableStream should expose the exception thrown when retrieving a blob
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-05 10:21:28 PST
<
rdar://problem/144243284
>
EWS
Comment 2
2025-02-06 01:37:58 PST
Committed
289919@main
(794627f1803f): <
https://commits.webkit.org/289919@main
> Reviewed commits have been landed. Closing PR #40060 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug