FileSystemWritableStream should expose the exception thrown when retrieving a blob rdar://144243284 https://bugs.webkit.org/show_bug.cgi?id=287093

Reviewed by Sihui Liu.

We pipe the exception received when retrieving blob content, if any, to the error mechanism.

* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any.worker-expected.txt:
* Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStreamSink.cpp:
(WebCore::fetchDataBytesForWrite):
(WebCore::FileSystemWritableFileStreamSink::write):

Canonical link: https://commits.webkit.org/289919@main